// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonAntd component > passes props to Ant Button 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
    disabled=""
    type="button"
  >
    <span>
      Action
    </span>
  </button>
</div>
`;

exports[`ButtonAntd component > renders children content 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
    type="button"
  >
    <span>
      Click me
    </span>
  </button>
</div>
`;
